# zorn

./: Cargo.toml  README.md  flake.nix
fuzz/: Cargo.toml
fuzz-afl/: Cargo.toml
fuzz-afl/fuzz_corpora/fuzz_identity/in/: incorrect_checksum
fuzz/corpora/identity/seed/: incorrect_hrp
fuzz/fuzz_corpora/fuzz_identity/in/: incorrect_length  incorrect_variant  test_id
fuzz/src/: main.rs
fuzz/targets/: identity.rs
nih/curve25519-dalek/: Cargo.toml
nih/x25519-dalek/: Cargo.toml
spec/: zorn.md
src/: cli.rs
src/cli/: encrypt.rs
zorn_core/: Cargo.toml
zorn_core/proptest-regressions/: xchacha20_blake3.txt
zorn_core/src/: identity.rs  key_exchange.rs  lib.rs  xchacha20_blake3.rs
