[package]
name = "zorn"
authors = ["Viktor Kleen <viktor@kleen.org>"]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["./zorn_core", "./fuzz"]

[patch.crates-io]
x25519-dalek = { path = "nih/x25519-dalek" }
curve25519-dalek = { path = "nih/curve25519-dalek" }
afl = { git = "https://github.com/vkleen/afl.rs" }

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "3.2.4"
getrandom = "0.2.7"
indoc = "1.0.7"
paste = "1.0.8"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
zorn-core = { path = "zorn_core" }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
