[package]
name = "zorn-core"
authors = ["Viktor Kleen <viktor@kleen.org>"]
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { path = "../nih/x25519-dalek" }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
subtle = "2.4.1"
rand_core = "0.6.3"
blake3 = "1.3.1"
aead = "0.5.1"
chacha20 = "0.9.0"
cipher = "0.4.3"

[dev-dependencies]
hex-literal = "0.3.4"
